# llm-chatbot-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: routes_conversations.py  routes_documents.py  routes_health.py  routes_messages.py
chroma_data/: chroma.sqlite3
core/: celery_app.py  config.py  prompts.py  text_splitter.py
database/: chroma.py  db.py
models/: conversation.py  document.py  message.py
schemas/: conversation.py  document.py  message.py
services/: ai_service.py  conversation_service.py  document_service.py  embedding_service.py  message_service.py  rag_service.py  tools_service.py
tests/: conftest.py  test_conversation_service.py  test_message_service.py  test_routes_conversations.py  test_routes_documents.py  test_routes_health.py  test_routes_messages.py  test_text_splitter.py
workers/: tasks.py
