[project]
name = "llm-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"